Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110408

[Win] Yet another unhandled exception on QNetworkInformation::load()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.5.1, 6.6.0
    • 6.3.2
    • Network
    • None
    • Windows
    • 5564b166a (dev), ab20901ec (6.5)

      Unhandled exception at 0x00007FF93C56CD29 in minidump (32).dmp: Microsoft C++ exception: winrt::hresult_error at memory location 0x00000041ED2FF120.
      

      Stack:

       	KERNELBASE.dll!RaiseException()	Unknown
       	VCRUNTIME140.dll!_CxxThrowException(void * pExceptionObject, const _s__ThrowInfo * pThrowInfo) Line 75	C++
       	qnetworklistmanager.dll!winrt::throw_hresult(const winrt::hresult result) Line 4969	C++
       	[Inline Frame] qnetworklistmanager.dll!winrt::check_hresult(const winrt::hresult) Line 5039	C++
       	[Inline Frame] qnetworklistmanager.dll!winrt::get_activation_factory(const winrt::param::hstring &) Line 6080	C++
       	qnetworklistmanager.dll!winrt::impl::factory_cache_entry<winrt::Windows::Networking::Connectivity::NetworkInformation,winrt::Windows::Networking::Connectivity::INetworkInformationStatics>::call<<lambda_8390ab113d856e25f2188e50ddec21f3> &>(winrt::Windows::Networking::Connectivity::NetworkInformation::NetworkStatusChanged::__l2::<lambda_8390ab113d856e25f2188e50ddec21f3> & callback) Line 6311	C++
       	[Inline Frame] qnetworklistmanager.dll!winrt::impl::call_factory(winrt::Windows::Networking::Connectivity::NetworkInformation::NetworkStatusChanged::__l2::<lambda_8390ab113d856e25f2188e50ddec21f3> &&) Line 6355	C++
       	[Inline Frame] qnetworklistmanager.dll!winrt::Windows::Networking::Connectivity::NetworkInformation::NetworkStatusChanged(const winrt::Windows::Networking::Connectivity::NetworkStatusChangedEventHandler &) Line 2188	C++
      >	qnetworklistmanager.dll!QNetworkListManagerEvents::start() Line 146	C++
       	qnetworklistmanager.dll!QNetworkListManagerNetworkInformationBackend::start() Line 228	C++
       	qnetworklistmanager.dll!QNetworkListManagerNetworkInformationBackendFactory::create(QFlags<enum QNetworkInformation::Feature> requiredFeatures) Line 149	C++
       	Qt6Network.dll!QNetworkInformationPrivate::create(QFlags<enum QNetworkInformation::Feature> features) Line 293	C++
       	Qt6Network.dll!QNetworkInformation::load(QFlags<enum QNetworkInformation::Feature> features) Line 710	C++
      

      Code:

      ...
      #ifdef SUPPORTS_WINRT
          using namespace winrt::Windows::Networking::Connectivity;
          using winrt::Windows::Foundation::IInspectable;
          // Register for changes in the network and store a token to unregister later:
          token = NetworkInformation::NetworkStatusChanged(                                          <<< HERE
                  [owner = QPointer(this)](const IInspectable sender) {
                      Q_UNUSED(sender);
                      if (owner) {
                          std::scoped_lock locker(owner->winrtLock);
                          if (owner->token)
                              owner->emitWinRTUpdates();
                      }
                  });
          // Emit initial state
          emitWinRTUpdates();
      #endif
      ...
      

        For Gerrit Dashboard: QTBUG-110408
        # Subject Branch Project Status CR V

            manordheim Mårten Nordheim
            studiosus Vladimir Belyavsky
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes