QNetworkInformation[Win]: Catch potential WinRT exceptions

Some Windows SDKs seem to throw an exception from winrt::check_hresult()
We need to handle this accordingly. Catch the exception and print relevant warning.

Fixes: QTBUG-110408
Change-Id: I1434ec425f0d0e597308b53f25f4f15049640060
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
(cherry picked from commit 5564b166a3ea00e44053edbf7b8b41f5c9bf8c39)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>